--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <p>Klik Link Dibawah!</p>
   <a href="https://png.pngtree.com/png-vector/20240204/ourlarge/pngtree-monkey-wearing-glasses-png-image_11538447.png" target="_blank">Link Valdo Viral 1Detik</a>
    <p>Silakan klik tombol di bawah untuk melihat video:</p>
-  <a href="video.html">Tonton Video</a>
+  <a href="Video.html">Tonton Video</a>
 </body>
 </html>
